# src/.swagger-output.json
@@ -22,7 +22,10 @@
   "paths": {
     "/users/login": {
       "post": {
-        "description": "",
+        "tags": [
+          "User"
+        ],
+        "description": "Login user.",
         "responses": {
           "200": {
             "description": "OK"
@@ -101,7 +104,38 @@
           }
         }
       },
-      "get": {
+      "delete": {
+        "tags": [
+          "User"
+        ],
+        "description": "Delete all user.",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Some error occurred while removing all Users..."
+          }
+        }
+      }
+    },
+    "/users/queryPage": {
+      "post": {
         "tags": [
           "User"
         ],
@@ -110,27 +144,6 @@
           {
             "name": "authorization",
             "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "page",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "size",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "title",
-            "in": "query",
             "schema": {
               "type": "string"
             }
@@ -161,31 +174,15 @@
           "500": {
             "description": "Some error occurred while retrieving users..."
           }
-        }
-      },
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Query"
+              }
             }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
-          "500": {
-            "description": "Some error occurred while removing all Users..."
           }
         }
       }
@@ -244,7 +241,7 @@
         "tags": [
           "User"
         ],
-        "description": "Create new user.",
+        "description": "Update new user.",
         "parameters": [
           {
             "name": "id",
@@ -288,7 +285,10 @@
         }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "User"
+        ],
+        "description": "Delete user.",
         "parameters": [
           {
             "name": "id",
@@ -328,6 +328,10 @@
       "User": {
         "type": "object",
         "properties": {
+          "id": {
+            "type": "number",
+            "example": 1
+          },
           "changed_by": {
             "type": "string",
             "example": "-"
@@ -357,6 +361,11 @@
             "example": "req.body.password"
           }
         },
+        "required": [
+          "name",
+          "surname",
+          "username"
+        ],
         "xml": {
           "name": "User"
         }
@@ -369,41 +378,17 @@
             "example": 3
           },
           "tutorials": {
-            "type": "array",
-            "items": {
-              "type": "object",
-              "properties": {
-                "id": {
-                  "type": "number",
-                  "example": 1
-                },
-                "changed_by": {
-                  "type": "string",
-                  "example": "may"
-                },
-                "name": {
-                  "type": "string",
-                  "example": "murat"
-                },
-                "surname": {
-                  "type": "string",
-                  "example": "ay"
-                },
-                "username": {
-                  "type": "string",
-                  "example": "may"
-                },
-                "password": {
-                  "type": "string",
-                  "example": "123"
-                },
-                "createdAt": {
-                  "type": "string",
-                  "example": "2024-11-20T19:47:23.616Z"
-                },
-                "updatedAt": {
-                  "type": "string",
-                  "example": "2024-11-20T19:47:23.616Z"
+            "type": "object",
+            "properties": {
+              "type": {
+                "type": "string",
+                "example": "array"
+              },
+              "allOf": {
+                "type": "array",
+                "items": {
+                  "type": "array",
+                  "items": {}
                 }
               }
             }
@@ -435,6 +420,28 @@
         },
         "xml": {
           "name": "Authentication"
+        }
+      },
+      "Query": {
+        "type": "object",
+        "properties": {
+          "page": {
+            "type": "number",
+            "example": 1
+          },
+          "size": {
+            "type": "number",
+            "example": 1
+          },
+          "filter": {
+            "xml": {
+              "name": "user"
+            },
+            "$ref": "#/components/schemas/User"
+          }
+        },
+        "xml": {
+          "name": "Query"
         }
       }
     }
