# src/routes/users.js
@@ -1,17 +1,19 @@
 const express = require('express');
 const router = express.Router();
 const userService = require('../service/userService');
-const jwtUtil = require('../security/jwt/jwt-util')
+const jwtUtil = require('../security/jwt/jwt-util');
+const {USER_CREATE_VALIDATOR} = require("../service/validation/user-validator");
+
 
 
 /* GET users listing. */
 router.post('/login', userService.login);
 
 // Create a new User
-router.post("/", jwtUtil.authenticateToken, userService.create);
+router.post("/", jwtUtil.authenticateToken,USER_CREATE_VALIDATOR, userService.create);
 
 // Retrieve all Users
-router.get("/", jwtUtil.authenticateToken, userService.findAll);
+router.post("/queryPage", jwtUtil.authenticateToken, userService.findAll);
 
 // Retrieve a single User with id
 router.get("/:id", jwtUtil.authenticateToken, userService.findOne);
